--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Repo-specific GitIgnore ----------------------------------------------------------------------------------------------
-runs/*
+# runs/
 
 # MATLAB GitIgnore -----------------------------------------------------------------------------------------------------
 *.m~
