--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,15 @@
 !targets*.mat
 
 # Neural Network weights -----------------------------------------------------------------------------------------------
-*.weights
-*.pt
-*.pb
-*.onnx
-*.engine
-*.mlmodel
-*.torchscript
-*.tflite
-*.h5
+# *.weights
+# *.pt
+# *.pb
+# *.onnx
+# *.engine
+# *.mlmodel
+# *.torchscript
+# *.tflite
+# *.h5
 *_saved_model/
 *_web_model/
 *_openvino_model/
