--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 darknet53.conv.74
 yolov3-tiny.conv.15
 
+wandb/
+events.out*
+
 # GitHub Python GitIgnore ----------------------------------------------------------------------------------------------
 # Byte-compiled / optimized / DLL files
 __pycache__/
