--- a/yolov5-train/yolov5-deepsparse/yolov5s-sgd/opt.yaml
+++ b/yolov5-train/yolov5-deepsparse/yolov5s-sgd/opt.yaml
@@ -1,9 +1,9 @@
 weights: yolov5s.pt
 cfg: ./models_v5.0/yolov5s.yaml
 data: /home/dnth/Desktop/yolov5-deepsparse-blogpost/yolov5-train/data/pistols.yaml
-hyp: data/hyps/hyp.finetune.yaml
-epochs: 300
-batch_size: 256
+hyp: data/hyps/hyp.scratch.yaml
+epochs: 100
+batch_size: 64
 imgsz: 416
 rect: false
 resume: false
