update train and val.py

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ darknet53.conv.74
 yolov3-tiny.conv.15
 
 wandb/
+annotation_results/
 events.out*
 
 # GitHub Python GitIgnore ----------------------------------------------------------------------------------------------
